# amv

./: .gitignore  CMakeLists.txt  Makefile  amv.hpp  amv.pc.in  base.cpp  base.hpp  debug.cpp  debug.hpp  exception.hpp
base/: base.cpp  base.hpp
debug/: debug.cpp  debug.hpp
example/: ex_1.cpp
file/: file.cpp  file.hpp
image/: bmp.cpp  bmp.hpp  image.cpp  image.hpp
image/contours/: morph.cpp  morph.hpp
test/: CMakeLists.txt  all.hpp  main.cpp
xml/: xml.cpp  xml.hpp
